<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>no.ntnu.iir.bluej.sonarlint</groupId>
  <artifactId>sonarlint4bluej</artifactId>
  <version>0.1.0-BETA</version>

  <name>sonarlint4bluej</name>
  <url>https://github.com/NTNU-IE-IIR/BlueJ-SonarLint-Plugin</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <sonarlint-core.version>7.0.0.37656</sonarlint-core.version>
    <sonarlint-java-plugin.version>7.6.0.28201</sonarlint-java-plugin.version>
  </properties>

  <dependencies>
    <dependency>
	    <groupId>com.github.NTNU-IE-IIR</groupId>
	    <artifactId>BlueJ-Linting-Core</artifactId>
	    <version>v0.1.0-BETA.3</version>
	  </dependency>

    <dependency>
      <groupId>org.sonarsource.sonarlint.core</groupId>
      <artifactId>sonarlint-core</artifactId>
      <version>${sonarlint-core.version}</version>
    </dependency>

    <dependency>
      <groupId>org.sonarsource.sonarlint.core</groupId>
      <artifactId>sonarlint-plugin-api</artifactId>
      <version>${sonarlint-core.version}</version>
    </dependency>

    <dependency>
      <groupId>org.sonarsource.java</groupId>
      <artifactId>sonar-java-plugin</artifactId>
      <version>${sonarlint-java-plugin.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>18-ea+4</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>18-ea+7</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>bluej</groupId>
      <artifactId>bluejext2</artifactId>
      <type>jar</type>
      <version>5.0.2</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
          <configuration>
            <finalName>${project.artifactId}-${project.version}-original</finalName>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <mainClass>no.ntnu.iir.bluej.sonarlint.SonarLintExtension</mainClass>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <artifactItems>
            <artifactItem>
              <groupId>org.sonarsource.java</groupId>
              <artifactId>sonar-java-plugin</artifactId>
              <version>${sonarlint-java-plugin.version}</version>
              <type>jar</type>
              <overWrite>false</overWrite>
              <outputDirectory>${project.build.directory}/classes/plugins</outputDirectory>
              <destFileName>sonar-java-plugin.jar</destFileName>
            </artifactItem>
          </artifactItems>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <goals>
             <goal>shade</goal>
            </goals>
            <configuration>
              <outputFile>./target/${project.artifactId}-${project.version}.jar</outputFile>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <artifactSet>
                <excludes>
                  <exclude>org.openjfx:*</exclude>
                  <exclude>junit:*</exclude>
                  <exclude>bluej:*</exclude>
                </excludes>
              </artifactSet>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
		</repository>

    <repository>
      <id>local_repository</id>
      <name>Repository in the projects lib directory</name>
      <layout>default</layout>
      <url>file:///${project.basedir}/lib</url>
      <releases><enabled>true</enabled></releases>
    </repository>
  </repositories>
</project>
